Implement #13700: if oncomplete represents a ValueExpression then run it via executeScript() after action event (#14059)
* Implement primefaces/primefaces#13700: if oncomplete represents a
ValueExpression then run it via executeScript() after action event

* remove accidentally committed IDE-generated gitignore

* Checkstyle fixes

* Improve primefaces/primefaces#13700: CSP support

* IT for primefaces/primefaces#13700

* Tidy up IT for primefaces/primefaces#13700

* Improved primefaces/primefaces#13700: pass window context

* Tidy up IT for primefaces/primefaces#13700

* Improved IT for primefaces/primefaces#13700

---------

Co-authored-by: Christoph Straßer <christoph.strasser78@gmail.com>